--- a/visibilidad-unlp/sitios_UIDs/trunk/plugins/Sedici-Plugin/css/sedici.css
+++ b/visibilidad-unlp/sitios_UIDs/trunk/plugins/Sedici-Plugin/css/sedici.css
@@ -20,7 +20,10 @@ p.mostrarfiltro{
 	color:#444 !important;
 }
 
-
+.sedici-style{
+  font-family: arial !important;
+  font-size: 10px !important;
+}
 
 p.conditionally-autor {
     padding: 6px 8px;
