--- a/css/sedici.css
+++ b/css/sedici.css
@@ -1,3 +1,15 @@
+/**
+ * Plugin Name: Sedici-Plugin
+ * Plugin URI: http://sedici.unlp.edu.ar/
+ * Description: This plugin connects the repository SEDICI in wordpress, with the purpose of showing the publications of authors or institutions
+ * Version: 1.0
+ * Author: SEDICI - Paula Salamone Lacunza
+ * Author URI: http://sedici.unlp.edu.ar/
+ * Copyright (c) 2015 SEDICI UNLP, http://sedici.unlp.edu.ar
+ * Distributed under the GNU GPL v3. For full terms see the file docs/COPYING.
+ */
+
+
 .go-to{
 	font-size: 14px;
 }
@@ -7,22 +19,20 @@
 }
 .summary{
 	text-align: justify;
-	width: 100%;
     text-justify: inter-word;
 }
 .sedici-style{
   font-family: arial;
   font-size: 12px;
 }
-
-
-
 p.description{
+	margin: 0;
 	color:#444 !important;
 }
 
 p.conditionally-loaded {
     padding: 6px 8px;
+    margin: 0;
     min-width: 200px;
     border-radius: 4px;
     border: 1px solid #ccc;
