Cambio de variables en class Sedici, estilos y js

--- a/css/sedici.css
+++ b/css/sedici.css
@@ -30,7 +30,7 @@ p.description{
 	color:#444 !important;
 }
 
-p.conditionally-loaded {
+p.conditionally-description {
     padding: 6px 8px;
     margin: 0;
     min-width: 200px;
@@ -38,22 +38,22 @@ p.conditionally-loaded {
     border: 1px solid #ccc;
 }
 
-p.conditionally-filtro {
+p.conditionally-filter {
     padding: 6px 8px;
     min-width: 200px;
     border-radius: 4px;
     border: 1px solid #ccc;
 }
-p.mostrarfiltro{
+p.show-filter{
 	color:#444 !important;
 }
 
-p.conditionally-autor {
+p.conditionally-author {
     padding: 6px 8px;
     min-width: 200px;
     border-radius: 4px;
     border: 1px solid #ccc;
 }
-p.mostrar-autor{
+p.show-author{
 	color:#444 !important;
 }
