--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -13,23 +13,23 @@
     
 }
 
-.a_unline a{
+.wpDspace .a_unline a{
     text-decoration:none;   
 }
 
 
-.ellipse{
+.wpDspace .ellipse{
 	float: left;
 }
 
 
-.page_navigation , .alt_page_navigation{
+.wpDspace .page_navigation ,.wpDspace .alt_page_navigation{
 	padding-bottom: 10px;
 }
 
-.page_navigation a, .alt_page_navigation a{
-	padding:3px 5px;
-	margin:2px;
+.wpDspace .page_navigation a, .wpDspace .alt_page_navigation a{
+	padding:1% 2%;
+	margin:2%;
 	color:black !important;
 	border-top: solid 1px #d2d2d2;
     border-left: solid 1px #c3c3c3;
@@ -42,24 +42,28 @@
 	font-size: 10px;
 	background-color:#dfdfdf ;
 }
-.noList{
+.wpDspace .page_navigation a:hover, .wpDspace .alt_page_navigation a:hover{
+	background: rgba(223, 223, 223, 0.4);
+	font-weight: bold;
+}
+.wpDspace .noList{
 list-style-type: none;
 }
 .noPagination .page_navigation{
 display: none;
 }
-.itemsPagination{
+.wpDspace .itemsPagination{
 	margin-bottom: 50px !important;
 }
-.active_page{
+.wpDspace .active_page{
 	background-color:#808080 !important;
 	color:black !important;
 }	
 
-.content, .alt_content{
+.wpDspace .content, .alt_content{
 	color: black;
 }
 
-.content li, .alt_content li, .content > p{
+.wpDspace .content li, .alt_content li, .content > p{
 	padding: 5px
 }
