--- a/inc/admin/view/templates/form-repo.html
+++ b/inc/admin/view/templates/form-repo.html
@@ -74,7 +74,7 @@
                 <th scope="row"> Nombre de la propiedad para consultar por materia</th>
                 <td scope="row">
                 <input type="text" value="{{result.repo.subject}}" name="subject" placeholder="materia:"> *
-                <p class='description'>http://sedici.unlp.edu.ar/open-search/discover?rpp=10&sort_by=3&order=desc&start=0&query=(<strong>subject:</strong>%22ciencias%22)</p>
+                <p class='description'>http://sedici.unlp.edu.ar/open-search/discover?rpp=10&sort_by=3&order=desc&start=0&query=(<strong>subject:</strong>"ciencias")</p>
              </td>         
              </tr>
              <tr>
