Agrego la opción de realizar consultas por grado alcanzado

--- a/inc/admin/view/templates/form-repo.html
+++ b/inc/admin/view/templates/form-repo.html
@@ -78,6 +78,13 @@
              </td>         
              </tr>
              <tr>
+                <th scope="row"> Nombre de la propiedad para consultar por carrera</th>
+                <td scope="row">
+                <input type="text" value="{{result.repo.degree}}" name="degree" placeholder="carrera:"> *
+                <p class='description'>http://sedici.unlp.edu.ar/open-search/discover?rpp=10&sort_by=3&order=desc&start=0&query=(<strong>thesis.degree.name:</strong>"Doctor en Ciencias Informáticas")</p>
+             </td>         
+             </tr>
+             <tr>
                 <th scope="row"> Nombre de la propiedad para consultar por subtipo de documento</th>
                 <td scope="row">
                     <input type="text" value="{{result.repo.subtype}}" name="subtype"
