Agregue la opción de consultar por api o opensearch al form

--- a/inc/admin/view/templates/form-repo.html
+++ b/inc/admin/view/templates/form-repo.html
@@ -9,7 +9,7 @@
             <tr>
                 <th scope="row">Nombre del Repositorio</th>
                 <td scope="row">
-                    <input type="text" value="{{result.repo.name}}" id="name" name="name" required placeholder="seidici"> *
+                    <input type="text" value="{{result.repo.name}}" id="name" name="name" required placeholder="sedici"> *
                     <p class='description'>Ejemplo: "sedici"</p>
                 </td>
             </tr>
@@ -94,6 +94,21 @@
                 <td scope="row">
                     <input type="checkbox" name="support" class="checkSupport" {{result.config_subtype.checked}}>
                     <p class='description'>Soporta subtipo de documentos</p>
+                </td>
+            </tr>
+            <tr>
+                <th> Utiliza Dspace 7</th>
+                <td scope="row">
+                    <input type="checkbox" name="dspaceVersion" class="checkVersion" {{result.config_dspaceUrl.checked}}>
+                    <p class='description'>Utiliza Dspace 7</p>
+                </td>
+            </tr>
+            <tr>
+                <th> URL de la API</th>
+                <td scope="row">
+                    <input type="text" value="{{result.repo.dspaceUrl}}" name="dspaceUrl"
+                        {{result.config_dspaceUrl.disabled}} {{result.config_dspaceUrl.required}} placeholder="URL de la api:"> *
+                    <p class='description'>https://host170.sedici.unlp.edu.ar/server/api/</p>
                 </td>
             </tr>
             <tr>
