--- a/inc/admin/css/wp-dspace-admin.css
+++ b/inc/admin/css/wp-dspace-admin.css
@@ -67,3 +67,74 @@
 .wpDspace .content li, .alt_content li, .content > p{
     padding: 5px
 }
+
+.wpDspace .formTit{
+    font-weight: bold;
+    font-size: 14px;
+}
+
+
+/*  CSS for on/off button */
+
+ /* The switch - the box around the slider */
+ .wpDspace .switch {
+    position: relative;
+    display: inline-block;
+    width: 55px;
+    height: 30px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .wpDspace .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .wpDspace .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: goldenrod;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .wpDspace .slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .wpDspace input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  .wpDspace input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  .wpDspace input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .wpDspace .slider.round {
+    border-radius: 34px;
+  }
+  
+  .wpDspace .slider.round:before {
+    border-radius: 50%;
+  } 
