--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -76,6 +76,8 @@ display: none;
 	list-style: none;
 }
 
+/* CSS para iframe y videos */
+
 .loader {
 	border: 16px solid #f3f3f3;
 	border-radius: 50%;
@@ -95,4 +97,22 @@ display: none;
   @keyframes spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
+  }
+
+  .containerDspaceVideo {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+  .responsive-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height:100%;
   }
